memindahkan assets keluar

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <aside>
                         <div class="home-right">
                             <div class="foto">
-                                <img src="../ASSETS/DSC_3890.png" alt="fotoku">
+                                <img src="DSC_3890.png" alt="fotoku">
                             </div>
                         </div>
                     </aside>
